[gd_scene load_steps=10 format=3 uid="uid://d3dglyqlcv3ns"]

[ext_resource type="Script" uid="uid://dg0fdhchjs2xg" path="res://addons/SimpleDungeons/DungeonRoom3D.gd" id="1_so222"]
[ext_resource type="Texture2D" uid="uid://ded3kvbcp2s6c" path="res://assets/textures/rock_gray/Rock002_1K-JPG_Roughness.jpg" id="2_dpx2w"]
[ext_resource type="Script" uid="uid://b4avbg4f7ol2k" path="res://scripts/remove_unused_doors.gd" id="2_j0a7j"]
[ext_resource type="Script" uid="uid://c7k7nrhp3yjhd" path="res://scripts/omni_light_3d.gd" id="3_dpx2w"]
[ext_resource type="Script" uid="uid://jxx8suhd7ebh" path="res://scripts/healing_area.gd" id="4_0l74w"]
[ext_resource type="AudioStream" uid="uid://bun75tc667bq3" path="res://assets/sfx/healing/sparkle.mp3" id="5_j0a7j"]
[ext_resource type="PackedScene" uid="uid://bt8isq1pq1xna" path="res://scenes/other/sound_component.tscn" id="6_0l74w"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_anrrp"]
albedo_color = Color(0.67, 0.67, 0.67, 1)
albedo_texture = ExtResource("2_dpx2w")

[sub_resource type="BoxShape3D" id="BoxShape3D_wkgr2"]

[node name="HealingRoom" type="Node3D"]
script = ExtResource("1_so222")
min_count = 3
max_count = 3
metadata/_custom_type_script = "uid://dg0fdhchjs2xg"

[node name="CSGBox3D" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_anrrp")
use_collision = true
size = Vector3(10, 10, 10)

[node name="RoomCut" type="CSGBox3D" parent="CSGBox3D"]
operation = 2
size = Vector3(9.5, 9.5, 9.5)

[node name="DOOR_FRONT" type="CSGBox3D" parent="CSGBox3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.049, -2.02651, -4.85)
operation = 2
size = Vector3(0.9, 5.28795, 3)

[node name="RemoveUnusedDoors" type="Node" parent="."]
script = ExtResource("2_j0a7j")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.1875, 1, 0, 1)
light_bake_mode = 1
shadow_enabled = true
omni_range = 5.78384
script = ExtResource("3_dpx2w")

[node name="HealingArea" type="Area3D" parent="." node_paths=PackedStringArray("heal_sound_component")]
collision_mask = 12
script = ExtResource("4_0l74w")
heal_sound_component = NodePath("../HealSoundComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HealingArea"]
transform = Transform3D(9.26314, 0, 0, 0, 9.26314, 0, 0, 0, 9.26314, 0, 0, 0)
shape = SubResource("BoxShape3D_wkgr2")

[node name="HealSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_0l74w")]
player = NodePath("HealPlayer")
min_volume = 20.0
max_volume = 20.0

[node name="HealPlayer" type="AudioStreamPlayer3D" parent="HealSoundComponent"]
stream = ExtResource("5_j0a7j")
volume_db = -6.0

[connection signal="body_entered" from="HealingArea" to="HealingArea" method="_on_body_entered"]
[connection signal="body_exited" from="HealingArea" to="HealingArea" method="_on_body_exited"]
[connection signal="room_health_depleted" from="HealingArea" to="OmniLight3D" method="_on_healing_area_room_health_depleted"]
